[metadata]
name = atm
version = 0.0.1
license = MIT
description = ATM script
long_description = file:README.rst
author = Samara Garrett-Rickman
author_email = samara.garrettr@gmail.com
classifiers =

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where = src


